SynProdGITV1/force-app/main/default/objects/Order/fields/Account_Channel__c.field-meta.xml
<CustomField>
    <fullName>Account_Channel__c</fullName>
    <description>Stores the account channel field on the order object, to be used in list view filters.</description>
    <formula>TEXT( Account.Channel__c )</formula>
    <label>Account Channel</label>
    <type>Text</type>
</CustomField>