SynProdGITV1/force-app/main/default/objects/Order/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>SD1-T16: Application</description>
    <label>Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>