SynProdGITV1/force-app/main/default/objects/Order/fields/Approved_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Approved_Line_Items__c</fullName>
    <description>SSP-176 SS2-T109 This field will show number of Line Items on Order for which approval is done or not required.</description>
    <inlineHelpText>Number of Line Items on Order for which approval is done or not required.</inlineHelpText>
    <label>Approved Line Items</label>
    <summaryFilterItems>
        <field>OrderItem.Sample_Item_Approval_Status__c</field>
        <operation>notContain</operation>
        <value>In Approval, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>