SynProdGITV1/force-app/main/default/objects/Order/fields/Can_Submit_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Can_Submit_for_Approval__c</fullName>
    <description>This formula field determines whether an Order can be submitted for approval. It ensures that Orders created by users with a specific profile (e.g., Partner Community User) can only be submitted if the related Account has at least one Account Team Member with the role “Distributor Manager.”</description>
    <formula>AND(
    $Profile.Name = &quot;Partner Community User&quot;,
    Account.Has_Distributor_Manager__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Submit for Approval</label>
    <type>Checkbox</type>
</CustomField>