SynProdGITV1/force-app/main/default/objects/Order/fields/Cloned_from_Sample_Order_ID_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloned_from_Sample_Order_ID_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SSP-176 SS2-T109 If the current Order is clonned order then the original Order&apos;s reference will be stored here.</description>
    <label>Cloned from (Sample Order ID/Name)</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>