SynProdGITV1/force-app/main/default/objects/Order/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>This field will capture the date on which order status was changed to completed</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>