SynProdGITV1/force-app/main/default/objects/Order/fields/Created_From_Portal__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Portal__c</fullName>
    <formula>CreatedBy.Profile.Name = &apos;Synthomer Distributor User&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created From Portal</label>
    <type>Checkbox</type>
</CustomField>