SynProdGITV1/force-app/main/default/objects/Order/fields/Delivery_Block__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Block__c</fullName>
    <description>SSP-176  SS2-T109 Block where the order will be delivered.</description>
    <label>Delivery Block</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>00 - No Block</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>01- Missing Credit limit</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>02- Political Reasons</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>03- Bottleneck material</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>04- No Export Documents</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>05- Check free of ch.dlv</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>06- No printing</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>07- Change in quantity</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>08- Kanban Delivery</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>09- JIT delivery (PDS)</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30- Price Chg. Approval</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>50- Check Shipping Data</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>51- Pricing Incomplete</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>52- Check Payment Terms</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>53- Check Prepayment</label>
            </value>
            <value>
                <fullName>Z1</fullName>
                <label>Z1- Material on Alloctn.</label>
            </value>
            <value>
                <fullName>Z2</fullName>
                <label>Z2- Sample order</label>
            </value>
            <value>
                <fullName>Z3</fullName>
                <label>Z3- Return Order</label>
            </value>
            <value>
                <fullName>Z4</fullName>
                <label>Z4- EHS Data Missing</label>
            </value>
            <value>
                <fullName>Z5</fullName>
                <label>Z5- Quantity below MOQ</label>
            </value>
            <value>
                <fullName>Z6</fullName>
                <label>Z6- EKAER</label>
            </value>
            <value>
                <fullName>Z7</fullName>
                <label>Z7- No EU VAT no. found</label>
            </value>
            <value>
                <fullName>Z8</fullName>
                <label>Z8- 3rd party Sales Orde</label>
            </value>
            <value>
                <fullName>Z9</fullName>
                <label>Z9- Consignment/ Credit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>