SynProdGITV1/force-app/main/default/objects/Order/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <description>SSP-176 SS2-T109 How the Order got generated</description>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Distribution_Channel</valueSetName>
    </valueSet>
</CustomField>