SynProdGITV1/force-app/main/default/objects/Order/fields/Distributor_Submission_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Submission_Approval_Status__c</fullName>
    <label>Distributor Submission Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Needed</fullName>
            </value>
            <value>
                <fullName>In Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>