SynProdGITV1/force-app/main/default/objects/Order/fields/Distributor_Submittor__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Submittor__c</fullName>
    <label>Distributor Submittor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>