SynProdGITV1/force-app/main/default/objects/Order/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <description>SD1-T16: Name of the end customer for whom the sample order is requested</description>
    <label>End Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>