SynProdGITV1/force-app/main/default/objects/Order/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <description>SSP-176 SS2-T109 Estimated Cost for the Order</description>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>