SynProdGITV1/force-app/main/default/objects/Order/fields/Evaluated_Ship_To_Party__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_Ship_To_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to store the shipping account name when the ship-to party account sales data does not matches with the plant sales data</description>
    <inlineHelpText>Ship to Account Name or One-Time Account Name</inlineHelpText>
    <label>Evaluated Ship-To Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Evaluated Ship-To Party)</relationshipLabel>
    <relationshipName>Orders_Evaluated_Ship_to_Party</relationshipName>
    <type>Lookup</type>
</CustomField>