SynProdGITV1/force-app/main/default/objects/Order/fields/Evaluated_Sold_To_Party__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_Sold_To_Party__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This will be same as Account Name for below scenarios:
a. Selected account type is Customer
b. One of Account&apos;s Sales Areas matches with  select product(s)&apos; Sales Area 

This will be replace with One-Time customer from Salesforce Order type dete.for below Scenarios:
a. Selected account type is Prospect
b. If Selected account type is Customer and  none of the Account&apos;s Sales Areas matches with  select product(s)&apos; Sales Area</description>
    <inlineHelpText>Account Name or One-Time Account Name</inlineHelpText>
    <label>Evaluated Sold-To Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Evaluated Sold-To Party)</relationshipLabel>
    <relationshipName>Orders_Evaluated</relationshipName>
    <type>Lookup</type>
</CustomField>