SynProdGITV1/force-app/main/default/objects/Order/fields/HQ_Account__c.field-meta.xml
<CustomField>
    <fullName>HQ_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SSP-176 SS2-T71 : This field will store HQ Account from Related Account</description>
    <label>HQ Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (HQ Account)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>