SynProdGITV1/force-app/main/default/objects/Order/fields/IncoTerms__c.field-meta.xml
<CustomField>
    <fullName>IncoTerms__c</fullName>
    <description>SSP-176 SS2-T109 International Commercial Terms</description>
    <inlineHelpText>International Commercial Terms</inlineHelpText>
    <label>IncoTerms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFR</fullName>
                <label>CFR - Costs and Freight</label>
            </value>
            <value>
                <fullName>CIF</fullName>
                <label>CIF - Costs, Insurance &amp; Freight</label>
            </value>
            <value>
                <fullName>CIP</fullName>
                <label>CIP - Carriage and Insurance Paid to</label>
            </value>
            <value>
                <fullName>CPT</fullName>
                <label>CPT - Carriage Paid to</label>
            </value>
            <value>
                <fullName>DAF</fullName>
                <label>DAF - Delivered at Frontier</label>
            </value>
            <value>
                <fullName>DAP</fullName>
                <label>DAP - Delivered at Place</label>
            </value>
            <value>
                <fullName>DAT</fullName>
                <label>DAT - Delivered at Terminal</label>
            </value>
            <value>
                <fullName>DDP</fullName>
                <label>DDP - Delivered Duty Paid</label>
            </value>
            <value>
                <fullName>DDU</fullName>
                <label>DDU - Delivered Duty Unpaid</label>
            </value>
            <value>
                <fullName>DEQ</fullName>
                <label>DEQ - Delivered ex Quay (duty paid)</label>
            </value>
            <value>
                <fullName>DES</fullName>
                <label>DES - Delivered ex Ship</label>
            </value>
            <value>
                <fullName>DPU</fullName>
                <label>DPU - Delivered at Place-Unloaded</label>
            </value>
            <value>
                <fullName>EXW</fullName>
                <label>EXW - Ex Works</label>
            </value>
            <value>
                <fullName>FAS</fullName>
                <label>FAS - Free Alongside Ship</label>
            </value>
            <value>
                <fullName>FCA</fullName>
                <label>FCA - Free Carrier</label>
            </value>
            <value>
                <fullName>FOB</fullName>
                <label>FOB - Free on Board</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>