SynProdGITV1/force-app/main/default/objects/Order/fields/IncoTerms_Location__c.field-meta.xml
<CustomField>
    <fullName>IncoTerms_Location__c</fullName>
    <description>SSP-176 SS2-T109 Location of International Commercial Terms</description>
    <label>IncoTerms Location</label>
    <length>70</length>
    <type>Text</type>
</CustomField>