SynProdGITV1/force-app/main/default/objects/Order/fields/Instruction_for_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Instruction_for_Warehouse__c</fullName>
    <description>SSP-176 In case there are any instructions for warehouse related to the Order</description>
    <label>Instruction for Warehouse</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>