SynProdGITV1/force-app/main/default/objects/Order/fields/Int_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Int_Contact_Details__c</fullName>
    <description>Ship To Contact&apos;s First Last Name and Mobile or Phone number</description>
    <formula>ShipToContact.FirstName &amp; &quot; &quot; + ShipToContact.LastName &amp; &quot; / &quot; &amp; IF(ISBLANK(ShipToContact.MobilePhone), ShipToContact.Phone, ShipToContact.MobilePhone) &amp; &quot; / &quot; +  ShipToContact.Email</formula>
    <inlineHelpText>Ship To Contact&apos;s First Last Name and Mobile or Phone number</inlineHelpText>
    <label>Int Contact Details</label>
    <type>Text</type>
</CustomField>