SynProdGITV1/force-app/main/default/objects/Order/fields/Int_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Int_StartDate__c</fullName>
    <description>Formula field created for use in integration when sending data to the S4 system</description>
    <formula>TEXT(EffectiveDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Int_StartDate</label>
    <type>Text</type>
</CustomField>