SynProdGITV1/force-app/main/default/objects/Order/fields/Integration_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related Log record that contains failure details for this Order.</description>
    <inlineHelpText>Click to view the log entry explaining why this Order failed during integration.</inlineHelpText>
    <label>Integration Error Log</label>
    <referenceTo>Log__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>