SynProdGITV1/force-app/main/default/objects/Order/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>SSP-176 SS2-T109 Any General Notes if the owner wants to pur</description>
    <label>Internal Notes</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>