SynProdGITV1/force-app/main/default/objects/Order/fields/Is_Ship_To_Contact_Related__c.field-meta.xml
<CustomField>
    <fullName>Is_Ship_To_Contact_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to check when the contact is related to the account and active.</description>
    <label>Is Ship To Contact Related?</label>
    <type>Checkbox</type>
</CustomField>