SynProdGITV1/force-app/main/default/objects/Order/fields/KSA_Short_Address__c.field-meta.xml
<CustomField>
    <fullName>KSA_Short_Address__c</fullName>
    <description>SSP-176 Short Address in Saudi Arabia</description>
    <label>KSA Short Address</label>
    <length>10</length>
    <type>Text</type>
</CustomField>