SynProdGITV1/force-app/main/default/objects/Order/fields/ML_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>ML_Approval_Status__c</fullName>
    <description>To store the Marl Lab approval statuses</description>
    <label>ML Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>