SynProdGITV1/force-app/main/default/objects/Order/fields/No_of_Packages__c.field-meta.xml
<CustomField>
    <fullName>No_of_Packages__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Indicates the total number of packages prepared during the Package Preparation stage. Used in Conga for generating shipment documents like the proforma invoice.</description>
    <label>No. of Packages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>