SynProdGITV1/force-app/main/default/objects/Order/fields/Order_DM_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_DM_External_ID__c</fullName>
    <description>Used only for Data migration and replicated Enorica Sample order as External ID

It will store the C4C Order Number for Migrated data:
a. S4 (non-replicated) Sample order, 
b. CRM Samples 
c. Enorica Samples

For S4 (replicated) sample order - it will be empty as Data migration of Replicated S4 Sample Order data to Salesforce is via interface</description>
    <externalId>true</externalId>
    <inlineHelpText>C4C Order Number</inlineHelpText>
    <label>Order DM External ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>