SynProdGITV1/force-app/main/default/objects/Order/fields/Packing_Date_and_Tracking_Match__c.field-meta.xml
<CustomField>
    <fullName>Packing_Date_and_Tracking_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is set to true if all Order Items under this Order have identical shipping dates and tracking numbers.</description>
    <label>Packing Date and Tracking Match</label>
    <type>Checkbox</type>
</CustomField>