SynProdGITV1/force-app/main/default/objects/Order/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SSP-176  SS2-T109 Lookup to Payment terms</description>
    <label>Payment Terms</label>
    <referenceTo>Payment_Terms__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>