SynProdGITV1/force-app/main/default/objects/Order/fields/Potential_Volume1__c.field-meta.xml
<CustomField>
    <fullName>Potential_Volume1__c</fullName>
    <description>SD1-T16: Potential Volume</description>
    <inlineHelpText>Enter the potential volume (numbers only).</inlineHelpText>
    <label>Potential Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>