SynProdGITV1/force-app/main/default/objects/Order/fields/Potential_Volume__c.field-meta.xml
<CustomField>
    <fullName>Potential_Volume__c</fullName>
    <description>SD1-T16: Potential Volume</description>
    <label>Potential Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>