SynProdGITV1/force-app/main/default/objects/Order/fields/Running_User_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Running_User_for_Approval__c</fullName>
    <description>Stores the email address of the running user used for sending approval notifications.</description>
    <label>Running User for Approval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>