SynProdGITV1/force-app/main/default/objects/Order/fields/S4_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>S4_Order_Type__c</fullName>
    <description>SSP-176 Order types for S4 Hana</description>
    <label>S4 Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>S4_Order_Type</valueSetName>
    </valueSet>
</CustomField>