SynProdGITV1/force-app/main/default/objects/Order/fields/Sales_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SSP-176 SS2-T109 Lookup to Sales Organisation</description>
    <label>Sales Organisation</label>
    <referenceTo>Sales_Org_Data__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>