SynProdGITV1/force-app/main/default/objects/Order/fields/Salesforce_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Order_Type__c</fullName>
    <description>SSP-176 Order type for Salesforce and including S4 and Enorica</description>
    <label>Salesforce Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salesforce_Order_Type</valueSetName>
    </valueSet>
</CustomField>