SynProdGITV1/force-app/main/default/objects/Order/fields/SAP_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_ID__c</fullName>
    <description>SSP-176 SS2-T109 Id of Order in SAP</description>
    <externalId>true</externalId>
    <label>SAP Order ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>