SynProdGITV1/force-app/main/default/objects/Order/fields/Shipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Cost__c</fullName>
    <description>SSP-176 SS2-T109 Cost to ship the order</description>
    <label>Shipment Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>