SynProdGITV1/force-app/main/default/objects/Order/fields/Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier__c</fullName>
    <description>SSP-176 SS2-T109 Carrier who will ship the Order</description>
    <label>Shipping Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alfaloc</fullName>
            </value>
            <value>
                <fullName>Customer Arranged</fullName>
            </value>
            <value>
                <fullName>Customer Pick-up</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>DPD</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>