SynProdGITV1/force-app/main/default/objects/Order/fields/Shipping_Condition__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Condition__c</fullName>
    <description>SSP-176 SS2-T109 How the shipping of Order is done.</description>
    <label>Shipping Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>02</fullName>
                <label>02- Pick-up</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>03- Immediately</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>04- Transport Service</label>
            </value>
            <value>
                <fullName>CC</fullName>
                <label>CC- Consi / Ret. Issue</label>
            </value>
            <value>
                <fullName>RE</fullName>
                <label>RE- Returns</label>
            </value>
            <value>
                <fullName>ZA</fullName>
                <label>ZA- Airfreight</label>
            </value>
            <value>
                <fullName>ZB</fullName>
                <label>ZB- Courier</label>
            </value>
            <value>
                <fullName>ZC</fullName>
                <label>ZC- Groupage</label>
            </value>
            <value>
                <fullName>ZD</fullName>
                <label>ZD- Rail</label>
            </value>
            <value>
                <fullName>ZE</fullName>
                <label>ZE- Road</label>
            </value>
            <value>
                <fullName>ZF</fullName>
                <label>ZF- Sea</label>
            </value>
            <value>
                <fullName>ZG</fullName>
                <label>ZG- Self-collection</label>
            </value>
            <value>
                <fullName>ZH</fullName>
                <label>ZH- Barge</label>
            </value>
            <value>
                <fullName>ZI</fullName>
                <label>ZI- Intermodal</label>
            </value>
            <value>
                <fullName>ZL</fullName>
                <label>ZL- LTL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>