SynProdGITV1/force-app/main/default/objects/Order/fields/Signature_Formula__c.field-meta.xml
<CustomField>
    <fullName>Signature_Formula__c</fullName>
    <formula>&quot;https://synthomer--maindev.sandbox.my.salesforce.com/sfc/p/KI000000H0wx/a/KI0000004IYZ/_tQYuxViCewFOCqg7fn57Y6JuUJsFdo5OJRCnO0knus&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature_Formula</label>
    <type>Text</type>
</CustomField>