SynProdGITV1/force-app/main/default/objects/Order/fields/Total_Items_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Items_Count__c</fullName>
    <description>SSP-176 Total Number of Order Products on Order</description>
    <label>Total Items Count</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>