SynProdGITV1/force-app/main/default/objects/Order/fields/TSCA_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>TSCA_Reference_ID__c</fullName>
    <description>Reference number given during TSCA approval process.</description>
    <inlineHelpText>Reference number given during TSCA approval process.</inlineHelpText>
    <label>TSCA Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>